--- a/lib/workpermit_web/templates/user/form.html.eex
+++ b/lib/workpermit_web/templates/user/form.html.eex
@@ -1,7 +1,7 @@
 <%= form_for @changeset, @action, [class: "bg-white w-full shadow-md rounded px-8 pt-6 pb-8 mb-4"], fn f -> %>
   <%= if @changeset.action do %>
     <div class="alert alert-danger">
-      <p><%= gettext("Oops, something went wrong! Please check the errors below.") %></p>
+      <p><%= gettext("Oops, something went wrong! Please check the errors below") %></p>
     </div>
   <% end %>
 
