--- a/lib/workpermit_web/templates/layout/landing.html.eex
+++ b/lib/workpermit_web/templates/layout/landing.html.eex
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="<%= gettext("en") %>">
-  <%= render "components/head.html", conn: @conn %>
+  <head>
+    <%= render "components/head.html", conn: @conn %>
+    <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/landing.css") %>">
+  </head>
   <body class="leading-normal tracking-normal text-white gradient" style="font-family: 'Source Sans Pro', sans-serif;">
     <%= render "components/nav.html", conn: @conn %>
     <%= Enum.map(get_flash(@conn), fn {type, message} -> %>
@@ -8,6 +11,6 @@
     <% end) %>
     <%= render @view_module, @view_template, assigns %>
     <%= render "components/footer.html", conn: @conn %>
-    <script type="text/javascript" src="<%=Routes.static_path(@conn, "/js/app.js") %>"></script>
+    <script type="text/javascript" src="<%=Routes.static_path(@conn, "/js/landing.js") %>"></script>
   </body>
 </html>
