--- a/lib/workpermit_web/templates/page/index.html.eex
+++ b/lib/workpermit_web/templates/page/index.html.eex
@@ -36,7 +36,7 @@
 <!-- section 1 -->
 <section class="bg-white border-b py-8 bg-white">
   <div class="container m-8 max-w-5xl mx-auto">
-    <h1 class="font-bold leading-tight my-2 text-5xl text-center text-gray-darker w-full"><%= gettext("Tired of:") %></h1>
+    <h1 class="font-bold leading-tight my-2 text-5xl text-center text-gray-darker w-full"><%= gettext("Tired of") %></h1>
     <div class="mb-4 w-full">
       <div class="gradient h-1 mx-auto my-0 opacity-25 py-0 rounded-t w-64"></div>
     </div>
