add missing checkbox

--- a/assets/css/_multi_step_form.scss
+++ b/assets/css/_multi_step_form.scss
@@ -45,7 +45,11 @@
 }
 
 #permitForm .awesomplete li {
-  display: block;
+  display: list-item;
+}
+
+#permitForm #category input[type="checkbox"] {
+  display: inline;
 }
 
 #permitForm input[type="checkbox"] {
