--- a/lib/workpermit_web/templates/permit/index.html.eex
+++ b/lib/workpermit_web/templates/permit/index.html.eex
@@ -1,5 +1,8 @@
 <div class="w-full max-w-6xl pt-16 mx-auto content-center flex-1">
-  <h1 class="c-h3 p-5 text-gray-darker"><%= gettext("Permits List") %></h1>
+  <div class="flex justify-between">
+    <h1 class="c-h3 p-5 text-gray-darker"><%= gettext("Permits List") %></h1>
+    <%= link gettext("New permit"), to: Routes.permit_path(@conn, :new), class: "bg-primary-medium hover:bg-primary-darker text-white text-xl font-bold pt-2 my-4 px-4 rounded" %>
+  </div>
   <table class = "bg-white mx-auto w-full shadow-md rounded px-8 pt-6 pb-8 mb-4 table">
     <thead>
       <tr>
@@ -42,9 +45,5 @@
       <% end %>
     </tbody>
   </table>
-  <div class="flex justify-between">
-    <%= link gettext("Back"), to: Routes.page_path(@conn, :index), class: "bg-transparent hover:bg-primary-light text-primary-medium font-semibold hover:text-white py-2 px-4 border border-primary-medium hover:border-transparent rounded" %>
-    <%= link gettext("New permit"), to: Routes.permit_path(@conn, :new), class: "bg-primary-medium hover:bg-primary-darker text-white font-bold py-2 px-4 rounded" %>
-  </div>
 </div>
 
