--- a/lib/workpermit_web/templates/permit/index.html.eex
+++ b/lib/workpermit_web/templates/permit/index.html.eex
@@ -1,7 +1,13 @@
 <div class="w-full max-w-6xl pt-16 mx-auto content-center flex-1">
   <div class="flex justify-between">
     <h1 class="c-h3 p-5 text-gray-darker"><%= gettext("Permits List") %></h1>
-    <%= link gettext("New permit"), to: Routes.permit_path(@conn, :new), class: "bg-primary-medium hover:bg-primary-darker text-white text-xl font-bold pt-2 my-4 px-4 rounded" %>
+    <%= link gettext("New permit"), to: Routes.permit_path(@conn, :new), class: "bg-primary-medium hover:bg-primary-darker text-white font-bold py-2 px-4 rounded" %>
+    <%= form_for @conn, Routes.permit_path(@conn, :index), [method: :get, class: "form-inline"], fn f -> %>
+      <div class="form-group">
+        <%= turbo_search_input f, "q[title_or_body_like]", class: "form-control", placeholder: "title or body" %>
+        <%= submit gettext("search"), class: "bg-primary-medium hover:bg-primary-darker text-white font-bold py-2 px-4 rounded" %>
+      </div>
+    <% end %>
   </div>
   <table class = "bg-white mx-auto w-full shadow-md rounded px-8 pt-6 pb-8 mb-4 table">
     <thead>
@@ -45,5 +51,8 @@
       <% end %>
     </tbody>
   </table>
+  <%= if @paginate.total_pages > 1 do %>
+    <%= turbo_pagination_links(@conn, @paginate) %>
+  <% end %> 
 </div>
 
