--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -6,6 +6,7 @@
   src: local(".SFNSText-Light"), local(".HelveticaNeueDeskInterface-Light"), local(".LucidaGrandeUI"), local("Ubuntu Light"), local("Segoe UI Light"), local("Roboto-Light"), local("DroidSans"), local("Tahoma");
 }
 
+@import "../../deps/phoenix_live_view/assets/css/live_view.css";
 /* Now, let's apply it on an element */
 body {
   font-family: "system";
