--- a/lib/web/templates/layout/landing.html.eex
+++ b/lib/web/templates/layout/landing.html.eex
@@ -6,6 +6,7 @@
   </head>
   <body class="leading-normal tracking-normal text-white gradient" style="font-family: 'Source Sans Pro', sans-serif;">
     <%= render "components/nav.html", conn: @conn %>
+    <%= svelte "test", %{:first_name => "Daniel", :last_name => "Kukula"}, "border" %></div>
     <%= Enum.map(get_flash(@conn), fn {type, message} -> %>
       <%= render "components/flash.html", type: type, message: message %>
     <% end) %>
